# TVplayer

./: CHANGELOG  CMakeLists.txt  COPYRIGHT  README  gmon.out  interfaces.h  run_server.sh
src/: CMakeLists.txt  TVplayer.c  android.c  audio.c  audio.h  config.h  cscope.files  cscope.out  display.c  display.h  event.c  event.h  file.c  file.h  libffmpeg.h  libsdl.h  log.h  parse.c  parse.h  queue.c  queue.h  structures.h  sync.c  sync.h  utility.h  video.c  video.h
