CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(TVPLAYER)
ADD_SUBDIRECTORY(src bin)
SET(DEBUG ON)
SET(CMAKE_C_FLAGS_DEBUG "$ENV{CFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_RELEASE "$ENV{CFLAGS} -O3 -Wall")
INCLUDE_DIRECTORIES(/usr/local/include/SDL)
#SET(CMAKE_VERBOSE_MAKEFILE ON)
AUX_SOURCE_DIRECTORY(./src SRC_LIST)
ADD_EXECUTABLE(TVplayer ${SRC_LIST})
INCLUDE_DIRECTORIES(/usr/include/SDL)
SET(LIBAUDIO_SRC ./src/audio.h ./src/audio.c)
ADD_LIBRARY(audio SHARED ${LIBAUDIO_SRC})
SET(LIBVIDEO_SRC ./src/video.h ./src/video.c)
ADD_LIBRARY(video SHARED ${LIBVIDEO_SRC})
SET(LIBFILE_SRC ./src/parse.h ./src/parse.c)
ADD_LIBRARY(parse SHARED ${LIBFILE_SRC})
SET(LIBSYNC_SRC ./src/sync.h ./src/sync.c)
ADD_LIBRARY(sync SHARED ${LIBSYNC_SRC})
SET(LIBQUEUE_SRC ./src/queue.h ./src/queue.c)
ADD_LIBRARY(queue SHARED ${LIBQUEUE_SRC})
SET(LIBDISPLAY_SRC ./src/display.h ./src/display.c)
ADD_LIBRARY(display SHARED ${LIBDISPLAY_SRC})

LINK_DIRECTORIES(/usr/local/lib /usr/lib)
TARGET_LINK_LIBRARIES(TVplayer audio video parse sync queue display avutil avformat avcodec avfilter SDL)
